files/rules.v4
# Generated by iptables-save v1.4.14 on Fri Jun  3 12:05:15 2016
*nat
:PREROUTING ACCEPT [5634968:3640997538]
:INPUT ACCEPT [34080:2702078]
:OUTPUT ACCEPT [33910:2048242]
:POSTROUTING ACCEPT [33913:2048374]
-A POSTROUTING -s 10.0.53.0/24 ! -d 10.0.53.0/24 -o bond0 -j SNAT --to-source 31.15.25.54
-A POSTROUTING -s 10.0.53.0/24 ! -d 10.0.53.0/24 -o bond0 -j SNAT --to-source 89.31.146.51
COMMIT
# Completed on Fri Jun  3 12:05:15 2016
# Generated by iptables-save v1.4.14 on Fri Jun  3 12:05:15 2016
*filter
:INPUT ACCEPT [25020:1819136]
:FORWARD ACCEPT [41472:85248936]
:OUTPUT ACCEPT [26521:2051076]
:fail2ban-ssh - [0:0]
-A INPUT -p tcp -m multiport --dports 22 -j fail2ban-ssh
-A INPUT -s 89.31.149.185/32 -d 89.31.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 80.12.87.245/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 3306 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -s 89.31.149.185/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -d 89.31.148.138/32 -p tcp -m tcp --dport 3306 -j DROP
-A INPUT -d 89.31.148.138/32 -p tcp -m tcp --dport 25 -j DROP
-A INPUT -s 10.0.53.0/24 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 10.0.53.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 95.211.198.87/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 95.211.87.85/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 85.17.156.76/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 85.17.156.11/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 85.17.156.99/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 95.211.217.68/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 82.103.128.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 46.20.45.18/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 78.31.69.179/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 94.247.174.83/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 46.165.195.139/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 91.109.115.41/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 94.46.4.1/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 83.170.113.210/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 94.46.240.121/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 212.84.74.156/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 158.58.173.160/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 95.141.32.46/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 178.255.155.2/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 78.40.124.16/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 178.255.154.2/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 176.31.228.137/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 188.138.118.184/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 188.138.124.110/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 188.138.118.144/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 85.25.176.167/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 178.255.152.2/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 178.255.153.2/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 174.34.162.242/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 64.141.100.136/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 174.34.224.167/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 69.59.28.19/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 174.34.156.130/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 173.248.147.18/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 72.46.140.186/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 76.164.194.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 208.64.28.194/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 72.46.153.26/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 72.46.140.106/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 72.46.130.42/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 204.152.200.42/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 67.205.67.76/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 70.32.40.2/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 64.237.55.3/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 76.72.171.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 76.72.172.208/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 76.72.167.90/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 108.62.115.226/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 199.87.228.66/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 178.255.154.2/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 173.204.85.217/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 50.23.94.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 64.120.6.122/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 67.228.213.178/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 69.64.56.47/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 96.31.66.245/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 184.75.209.18/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 184.75.208.210/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 184.75.210.90/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 184.75.210.226/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 184.75.210.186/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 208.43.68.59/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 95.211.198.87/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 95.211.87.85/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 85.17.156.76/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 85.17.156.11/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 85.17.156.99/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 95.211.217.68/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 82.103.128.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 46.20.45.18/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 78.31.69.179/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 94.247.174.83/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 46.165.195.139/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 91.109.115.41/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 94.46.4.1/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 83.170.113.210/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 94.46.240.121/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 212.84.74.156/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 158.58.173.160/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 95.141.32.46/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 178.255.155.2/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 78.40.124.16/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 178.255.154.2/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 176.31.228.137/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 188.138.118.184/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 188.138.124.110/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 188.138.118.144/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 85.25.176.167/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 178.255.152.2/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 178.255.153.2/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 174.34.162.242/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 64.141.100.136/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 174.34.224.167/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 69.59.28.19/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 174.34.156.130/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 173.248.147.18/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 72.46.140.186/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 76.164.194.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 208.64.28.194/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 72.46.153.26/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 72.46.140.106/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 72.46.130.42/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 204.152.200.42/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 67.205.67.76/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 70.32.40.2/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 64.237.55.3/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 76.72.171.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 76.72.172.208/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 76.72.167.90/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 108.62.115.226/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 199.87.228.66/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 178.255.154.2/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 173.204.85.217/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 50.23.94.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 64.120.6.122/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 67.228.213.178/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 69.64.56.47/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 96.31.66.245/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 184.75.209.18/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 184.75.208.210/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 184.75.210.90/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 184.75.210.226/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 184.75.210.186/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 208.43.68.59/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment Pingdom -j ACCEPT
-A INPUT -s 50.31.164.139/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment NewRelicPinger -j ACCEPT
-A INPUT -s 50.112.95.211/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment NewRelicPinger -j ACCEPT
-A INPUT -s 54.247.188.179/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment NewRelicPinger -j ACCEPT
-A INPUT -s 54.248.250.232/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment NewRelicPinger -j ACCEPT
-A INPUT -s 54.251.34.67/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment NewRelicPinger -j ACCEPT
-A INPUT -s 184.73.237.85/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment NewRelicPinger -j ACCEPT
-A INPUT -s 50.31.164.139/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment NewRelicPinger -j ACCEPT
-A INPUT -s 50.112.95.211/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment NewRelicPinger -j ACCEPT
-A INPUT -s 54.247.188.179/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment NewRelicPinger -j ACCEPT
-A INPUT -s 54.248.250.232/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment NewRelicPinger -j ACCEPT
-A INPUT -s 54.251.34.67/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment NewRelicPinger -j ACCEPT
-A INPUT -s 184.73.237.85/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment NewRelicPinger -j ACCEPT
-A INPUT -s 109.72.23.200/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment JE -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -m comment --comment JE -j ACCEPT
-A INPUT -s 109.72.23.200/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment JE -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -m comment --comment JE -j ACCEPT
-A INPUT -s 89.31.149.185/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 89.159.87.17/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 80.12.87.245/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 88.182.129.177/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 89.31.150.118/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 89.31.150.119/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 89.31.150.120/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 88.177.139.36/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 62.23.130.5/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 62.23.130.6/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 62.23.130.7/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 62.23.130.8/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 212.43.237.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 82.138.92.157/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 82.138.92.158/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 82.232.202.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 107.21.153.4/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 107.21.198.175/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 184.73.67.48/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 23.22.14.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 54.196.29.75/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 54.197.95.184/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 54.198.164.182/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 54.242.206.165/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 54.81.171.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 54.87.190.23/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 191.239.208.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 104.40.128.79/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 191.233.99.34/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 23.102.2.202/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 191.239.208.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 104.40.140.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 191.233.102.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 23.102.2.21/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 194.105.144.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 194.105.144.28/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 194.105.145.147/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 109.72.23.200/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 194.168.166.135/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 82.229.184.137/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 80.13.155.201/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 84.14.218.22/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 5.196.82.194/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 87.98.132.72/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 109.9.74.134/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 54.154.84.94/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 62.232.206.242/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 89.233.7.227/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 62.82.143.210/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 89.101.243.130/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 62.232.169.250/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 109.72.30.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 109.72.23.224/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 93.33.32.65/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 37.1.104.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 109.72.31.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 176.31.90.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 5.39.110.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 188.165.78.128/25 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 78.193.76.53/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -d 31.15.25.54/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -s 89.31.149.185/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 89.159.87.17/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 80.12.87.245/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 88.182.129.177/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 89.31.150.118/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 89.31.150.119/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 89.31.150.120/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 88.177.139.36/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 62.23.130.5/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 62.23.130.6/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 62.23.130.7/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 62.23.130.8/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 212.43.237.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 82.138.92.157/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 82.138.92.158/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 82.232.202.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 107.21.153.4/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 107.21.198.175/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 184.73.67.48/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 23.22.14.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 54.196.29.75/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 54.197.95.184/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 54.198.164.182/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 54.242.206.165/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 54.81.171.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 54.87.190.23/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 191.239.208.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 104.40.128.79/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 191.233.99.34/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 23.102.2.202/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 191.239.208.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 104.40.140.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 191.233.102.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 23.102.2.21/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 194.105.144.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 194.105.144.28/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 194.105.145.147/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 109.72.23.200/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 194.168.166.135/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 82.229.184.137/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 80.13.155.201/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 84.14.218.22/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 5.196.82.194/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 87.98.132.72/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 109.9.74.134/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 54.154.84.94/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 62.232.206.242/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 89.233.7.227/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 62.82.143.210/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 89.101.243.130/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 62.232.169.250/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 109.72.30.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 109.72.23.224/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 93.33.32.65/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 37.1.104.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 109.72.31.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 176.31.90.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 5.39.110.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 188.165.78.128/25 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -s 78.193.76.53/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j ACCEPT
-A INPUT -d 31.15.25.54/32 -p tcp -m tcp --dport 8001 -j DROP
-A INPUT -s 89.31.149.185/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 89.159.87.17/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 80.12.87.245/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 88.182.129.177/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 89.31.150.118/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 89.31.150.119/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 89.31.150.120/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 88.177.139.36/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 62.23.130.5/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 62.23.130.6/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 62.23.130.7/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 62.23.130.8/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 212.43.237.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 82.138.92.157/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 82.138.92.158/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 82.232.202.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 107.21.153.4/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 107.21.198.175/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 184.73.67.48/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 23.22.14.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 54.196.29.75/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 54.197.95.184/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 54.198.164.182/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 54.242.206.165/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 54.81.171.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 54.87.190.23/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 191.239.208.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 104.40.128.79/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 191.233.99.34/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 23.102.2.202/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 191.239.208.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 104.40.140.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 191.233.102.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 23.102.2.21/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 194.105.144.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 194.105.144.28/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 194.105.145.147/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 109.72.23.200/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 194.168.166.135/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 82.229.184.137/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 80.13.155.201/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 84.14.218.22/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 5.196.82.194/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 87.98.132.72/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 109.9.74.134/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 54.154.84.94/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 62.232.206.242/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 89.233.7.227/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 62.82.143.210/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 89.101.243.130/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 62.232.169.250/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 109.72.30.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 109.72.23.224/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 93.33.32.65/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 37.1.104.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 109.72.31.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 176.31.90.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 5.39.110.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 188.165.78.128/25 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -s 78.193.76.53/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j ACCEPT
-A INPUT -d 31.15.25.54/32 -p tcp -m tcp --dport 8002 -j DROP
-A INPUT -s 89.31.149.185/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 89.159.87.17/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 80.12.87.245/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 88.182.129.177/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 89.31.150.118/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 89.31.150.119/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 89.31.150.120/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 88.177.139.36/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 62.23.130.5/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 62.23.130.6/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 62.23.130.7/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 62.23.130.8/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 212.43.237.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 82.138.92.157/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 82.138.92.158/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 82.232.202.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 107.21.153.4/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 107.21.198.175/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 184.73.67.48/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 23.22.14.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 54.196.29.75/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 54.197.95.184/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 54.198.164.182/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 54.242.206.165/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 54.81.171.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 54.87.190.23/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 191.239.208.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 104.40.128.79/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 191.233.99.34/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 23.102.2.202/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 191.239.208.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 104.40.140.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 191.233.102.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 23.102.2.21/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 194.105.144.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 194.105.144.28/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 194.105.145.147/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 109.72.23.200/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 194.168.166.135/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 82.229.184.137/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 80.13.155.201/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 84.14.218.22/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 5.196.82.194/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 87.98.132.72/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 109.9.74.134/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 54.154.84.94/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 62.232.206.242/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 89.233.7.227/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 62.82.143.210/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 89.101.243.130/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 62.232.169.250/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 109.72.30.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 109.72.23.224/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 93.33.32.65/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 37.1.104.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 109.72.31.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 176.31.90.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 5.39.110.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 188.165.78.128/25 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -s 78.193.76.53/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j ACCEPT
-A INPUT -d 31.15.25.54/32 -p tcp -m tcp --dport 8003 -j DROP
-A INPUT -s 89.31.149.185/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 89.159.87.17/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 80.12.87.245/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 88.182.129.177/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 89.31.150.118/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 89.31.150.119/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 89.31.150.120/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 88.177.139.36/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 62.23.130.5/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 62.23.130.6/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 62.23.130.7/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 62.23.130.8/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 212.43.237.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 82.138.92.157/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 82.138.92.158/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 82.232.202.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 107.21.153.4/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 107.21.198.175/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 184.73.67.48/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 23.22.14.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 54.196.29.75/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 54.197.95.184/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 54.198.164.182/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 54.242.206.165/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 54.81.171.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 54.87.190.23/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 191.239.208.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 104.40.128.79/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 191.233.99.34/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 23.102.2.202/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 191.239.208.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 104.40.140.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 191.233.102.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 23.102.2.21/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 194.105.144.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 194.105.144.28/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 194.105.145.147/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 109.72.23.200/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 194.168.166.135/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 82.229.184.137/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 80.13.155.201/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 84.14.218.22/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 5.196.82.194/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 87.98.132.72/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 109.9.74.134/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 54.154.84.94/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 62.232.206.242/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 89.233.7.227/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 62.82.143.210/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 89.101.243.130/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 62.232.169.250/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 109.72.30.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 109.72.23.224/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 93.33.32.65/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 37.1.104.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 109.72.31.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 176.31.90.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 5.39.110.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 188.165.78.128/25 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -s 78.193.76.53/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j ACCEPT
-A INPUT -d 31.15.25.54/32 -p tcp -m tcp --dport 8004 -j DROP
-A INPUT -s 89.31.149.185/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 89.159.87.17/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 80.12.87.245/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 88.182.129.177/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 89.31.150.118/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 89.31.150.119/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 89.31.150.120/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 88.177.139.36/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 62.23.130.5/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 62.23.130.6/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 62.23.130.7/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 62.23.130.8/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 212.43.237.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 82.138.92.157/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 82.138.92.158/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 82.232.202.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 107.21.153.4/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 107.21.198.175/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 184.73.67.48/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 23.22.14.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 54.196.29.75/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 54.197.95.184/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 54.198.164.182/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 54.242.206.165/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 54.81.171.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 54.87.190.23/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 191.239.208.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 104.40.128.79/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 191.233.99.34/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 23.102.2.202/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 191.239.208.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 104.40.140.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 191.233.102.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 23.102.2.21/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 194.105.144.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 194.105.144.28/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 194.105.145.147/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 109.72.23.200/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 194.168.166.135/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 82.229.184.137/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 80.13.155.201/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 84.14.218.22/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 5.196.82.194/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 87.98.132.72/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 109.9.74.134/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 54.154.84.94/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 62.232.206.242/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 89.233.7.227/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 62.82.143.210/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 89.101.243.130/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 62.232.169.250/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 109.72.30.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 109.72.23.224/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 93.33.32.65/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 37.1.104.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 109.72.31.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 176.31.90.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 5.39.110.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 188.165.78.128/25 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -s 78.193.76.53/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j ACCEPT
-A INPUT -d 31.15.25.54/32 -p tcp -m tcp --dport 8005 -j DROP
-A INPUT -s 89.31.149.185/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 89.159.87.17/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 80.12.87.245/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 88.182.129.177/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 89.31.150.118/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 89.31.150.119/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 89.31.150.120/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 88.177.139.36/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 62.23.130.5/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 62.23.130.6/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 62.23.130.7/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 62.23.130.8/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 212.43.237.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 82.138.92.157/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 82.138.92.158/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 82.232.202.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 107.21.153.4/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 107.21.198.175/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 184.73.67.48/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 23.22.14.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 54.196.29.75/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 54.197.95.184/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 54.198.164.182/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 54.242.206.165/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 54.81.171.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 54.87.190.23/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 191.239.208.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 104.40.128.79/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 191.233.99.34/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 23.102.2.202/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 191.239.208.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 104.40.140.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 191.233.102.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 23.102.2.21/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 194.105.144.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 194.105.144.28/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 194.105.145.147/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 109.72.23.200/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 194.168.166.135/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 82.229.184.137/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 80.13.155.201/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 84.14.218.22/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 5.196.82.194/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 87.98.132.72/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 109.9.74.134/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 54.154.84.94/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 62.232.206.242/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 89.233.7.227/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 62.82.143.210/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 89.101.243.130/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 62.232.169.250/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 109.72.30.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 109.72.23.224/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 93.33.32.65/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 37.1.104.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 109.72.31.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 176.31.90.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 5.39.110.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 188.165.78.128/25 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -s 78.193.76.53/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j ACCEPT
-A INPUT -d 31.15.25.54/32 -p tcp -m tcp --dport 8006 -j DROP
-A INPUT -s 89.31.149.185/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 89.159.87.17/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 80.12.87.245/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 88.182.129.177/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 89.31.150.118/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 89.31.150.119/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 89.31.150.120/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 88.177.139.36/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 62.23.130.5/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 62.23.130.6/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 62.23.130.7/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 62.23.130.8/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 212.43.237.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 82.138.92.157/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 82.138.92.158/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 82.232.202.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 107.21.153.4/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 107.21.198.175/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 184.73.67.48/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 23.22.14.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 54.196.29.75/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 54.197.95.184/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 54.198.164.182/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 54.242.206.165/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 54.81.171.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 54.87.190.23/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 191.239.208.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 104.40.128.79/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 191.233.99.34/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 23.102.2.202/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 191.239.208.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 104.40.140.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 191.233.102.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 23.102.2.21/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 194.105.144.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 194.105.144.28/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 194.105.145.147/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 109.72.23.200/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 194.168.166.135/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 82.229.184.137/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 80.13.155.201/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 84.14.218.22/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 5.196.82.194/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 87.98.132.72/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 109.9.74.134/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 54.154.84.94/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 62.232.206.242/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 89.233.7.227/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 62.82.143.210/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 89.101.243.130/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 62.232.169.250/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 109.72.30.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 109.72.23.224/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 93.33.32.65/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 37.1.104.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 109.72.31.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 176.31.90.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 5.39.110.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 188.165.78.128/25 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -s 78.193.76.53/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j ACCEPT
-A INPUT -d 31.15.25.54/32 -p tcp -m tcp --dport 8007 -j DROP
-A INPUT -s 89.31.149.185/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 89.159.87.17/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 80.12.87.245/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 88.182.129.177/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 89.31.150.118/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 89.31.150.119/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 89.31.150.120/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 88.177.139.36/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 62.23.130.5/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 62.23.130.6/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 62.23.130.7/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 62.23.130.8/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 212.43.237.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 82.138.92.157/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 82.138.92.158/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 82.232.202.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 107.21.153.4/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 107.21.198.175/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 184.73.67.48/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 23.22.14.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 54.196.29.75/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 54.197.95.184/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 54.198.164.182/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 54.242.206.165/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 54.81.171.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 54.87.190.23/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 191.239.208.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 104.40.128.79/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 191.233.99.34/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 23.102.2.202/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 191.239.208.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 104.40.140.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 191.233.102.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 23.102.2.21/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 194.105.144.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 194.105.144.28/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 194.105.145.147/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 109.72.23.200/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 194.168.166.135/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 82.229.184.137/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 80.13.155.201/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 84.14.218.22/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 5.196.82.194/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 87.98.132.72/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 109.9.74.134/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 54.154.84.94/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 62.232.206.242/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 89.233.7.227/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 62.82.143.210/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 89.101.243.130/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 62.232.169.250/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 109.72.30.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 109.72.23.224/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 93.33.32.65/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 37.1.104.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 109.72.31.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 176.31.90.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 5.39.110.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 188.165.78.128/25 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -s 78.193.76.53/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j ACCEPT
-A INPUT -d 31.15.25.54/32 -p tcp -m tcp --dport 8008 -j DROP
-A INPUT -s 89.31.149.185/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 89.159.87.17/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 80.12.87.245/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 88.182.129.177/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 89.31.150.118/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 89.31.150.119/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 89.31.150.120/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 88.177.139.36/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 62.23.130.5/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 62.23.130.6/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 62.23.130.7/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 62.23.130.8/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 212.43.237.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 82.138.92.157/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 82.138.92.158/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 82.232.202.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 107.21.153.4/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 107.21.198.175/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 184.73.67.48/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 23.22.14.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 54.196.29.75/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 54.197.95.184/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 54.198.164.182/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 54.242.206.165/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 54.81.171.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 54.87.190.23/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 191.239.208.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 104.40.128.79/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 191.233.99.34/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 23.102.2.202/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 191.239.208.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 104.40.140.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 191.233.102.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 23.102.2.21/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 194.105.144.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 194.105.144.28/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 194.105.145.147/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 109.72.23.200/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 194.168.166.135/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 82.229.184.137/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 80.13.155.201/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 84.14.218.22/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 5.196.82.194/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 87.98.132.72/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 109.9.74.134/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 54.154.84.94/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 62.232.206.242/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 89.233.7.227/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 62.82.143.210/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 89.101.243.130/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 62.232.169.250/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 109.72.30.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 109.72.23.224/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 93.33.32.65/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 37.1.104.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 109.72.31.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 176.31.90.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 5.39.110.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 188.165.78.128/25 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -s 78.193.76.53/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j ACCEPT
-A INPUT -d 31.15.25.54/32 -p tcp -m tcp --dport 8009 -j DROP
-A INPUT -s 89.31.149.185/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 89.159.87.17/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 80.12.87.245/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 88.182.129.177/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 89.31.150.118/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 89.31.150.119/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 89.31.150.120/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 88.177.139.36/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 62.23.130.5/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 62.23.130.6/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 62.23.130.7/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 62.23.130.8/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 212.43.237.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 82.138.92.157/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 82.138.92.158/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 82.232.202.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 107.21.153.4/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 107.21.198.175/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 184.73.67.48/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 23.22.14.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 54.196.29.75/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 54.197.95.184/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 54.198.164.182/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 54.242.206.165/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 54.81.171.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 54.87.190.23/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 191.239.208.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 104.40.128.79/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 191.233.99.34/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 23.102.2.202/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 191.239.208.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 104.40.140.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 191.233.102.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 23.102.2.21/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 194.105.144.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 194.105.144.28/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 194.105.145.147/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 109.72.23.200/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 194.168.166.135/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 82.229.184.137/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 80.13.155.201/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 84.14.218.22/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 5.196.82.194/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 87.98.132.72/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 109.9.74.134/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 54.154.84.94/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 62.232.206.242/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 89.233.7.227/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 62.82.143.210/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 89.101.243.130/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 62.232.169.250/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 109.72.30.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 109.72.23.224/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 93.33.32.65/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 37.1.104.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 109.72.31.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 176.31.90.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 5.39.110.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 188.165.78.128/25 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -s 78.193.76.53/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j ACCEPT
-A INPUT -d 31.15.25.54/32 -p tcp -m tcp --dport 8181 -j DROP
-A INPUT -s 89.31.149.185/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 89.159.87.17/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 80.12.87.245/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 88.182.129.177/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 89.31.150.118/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 89.31.150.119/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 89.31.150.120/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 88.177.139.36/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 62.23.130.5/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 62.23.130.6/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 62.23.130.7/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 62.23.130.8/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 212.43.237.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 82.138.92.157/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 82.138.92.158/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 82.232.202.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 107.21.153.4/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 107.21.198.175/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 184.73.67.48/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 23.22.14.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 54.196.29.75/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 54.197.95.184/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 54.198.164.182/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 54.242.206.165/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 54.81.171.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 54.87.190.23/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 191.239.208.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 104.40.128.79/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 191.233.99.34/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 23.102.2.202/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 191.239.208.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 104.40.140.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 191.233.102.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 23.102.2.21/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 194.105.144.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 194.105.144.28/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 194.105.145.147/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 109.72.23.200/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 194.168.166.135/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 82.229.184.137/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 80.13.155.201/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 84.14.218.22/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 5.196.82.194/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 87.98.132.72/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 109.9.74.134/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 54.154.84.94/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 62.232.206.242/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 89.233.7.227/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 62.82.143.210/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 89.101.243.130/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 62.232.169.250/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 109.72.30.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 109.72.23.224/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 93.33.32.65/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 37.1.104.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 109.72.31.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 176.31.90.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 5.39.110.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 188.165.78.128/25 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -s 78.193.76.53/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j ACCEPT
-A INPUT -d 31.15.25.54/32 -p tcp -m tcp --dport 8182 -j DROP
-A INPUT -s 89.31.149.185/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 89.159.87.17/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 80.12.87.245/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 88.182.129.177/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 89.31.150.118/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 89.31.150.119/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 89.31.150.120/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 88.177.139.36/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 62.23.130.5/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 62.23.130.6/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 62.23.130.7/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 62.23.130.8/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 212.43.237.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 82.138.92.157/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 82.138.92.158/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 82.232.202.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 107.21.153.4/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 107.21.198.175/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 184.73.67.48/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 23.22.14.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 54.196.29.75/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 54.197.95.184/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 54.198.164.182/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 54.242.206.165/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 54.81.171.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 54.87.190.23/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 191.239.208.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 104.40.128.79/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 191.233.99.34/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 23.102.2.202/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 191.239.208.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 104.40.140.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 191.233.102.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 23.102.2.21/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 194.105.144.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 194.105.144.28/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 194.105.145.147/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 109.72.23.200/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 194.168.166.135/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 82.229.184.137/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 80.13.155.201/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 84.14.218.22/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 5.196.82.194/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 87.98.132.72/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 109.9.74.134/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 54.154.84.94/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 62.232.206.242/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 89.233.7.227/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 62.82.143.210/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 89.101.243.130/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 62.232.169.250/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 109.72.30.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 109.72.23.224/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 93.33.32.65/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 37.1.104.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 109.72.31.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 176.31.90.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 5.39.110.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 188.165.78.128/25 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -s 78.193.76.53/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j ACCEPT
-A INPUT -d 31.15.25.54/32 -p tcp -m tcp --dport 8183 -j DROP
-A INPUT -s 89.31.149.185/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 89.159.87.17/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 80.12.87.245/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 88.182.129.177/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 89.31.150.118/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 89.31.150.119/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 89.31.150.120/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 88.177.139.36/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 62.23.130.5/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 62.23.130.6/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 62.23.130.7/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 62.23.130.8/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 212.43.237.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 82.138.92.157/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 82.138.92.158/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 82.232.202.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 107.21.153.4/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 107.21.198.175/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 184.73.67.48/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 23.22.14.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 54.196.29.75/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 54.197.95.184/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 54.198.164.182/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 54.242.206.165/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 54.81.171.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 54.87.190.23/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 191.239.208.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 104.40.128.79/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 191.233.99.34/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 23.102.2.202/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 191.239.208.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 104.40.140.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 191.233.102.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 23.102.2.21/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 194.105.144.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 194.105.144.28/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 194.105.145.147/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 109.72.23.200/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 194.168.166.135/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 82.229.184.137/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 80.13.155.201/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 84.14.218.22/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 5.196.82.194/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 87.98.132.72/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 109.9.74.134/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 54.154.84.94/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 62.232.206.242/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 89.233.7.227/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 62.82.143.210/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 89.101.243.130/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 62.232.169.250/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 109.72.30.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 109.72.23.224/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 93.33.32.65/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 37.1.104.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 109.72.31.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 176.31.90.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 5.39.110.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 188.165.78.128/25 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -s 78.193.76.53/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j ACCEPT
-A INPUT -d 31.15.25.54/32 -p tcp -m tcp --dport 8184 -j DROP
-A INPUT -s 89.31.149.185/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 89.159.87.17/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 80.12.87.245/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 88.182.129.177/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 89.31.150.118/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 89.31.150.119/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 89.31.150.120/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 88.177.139.36/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 62.23.130.5/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 62.23.130.6/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 62.23.130.7/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 62.23.130.8/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 212.43.237.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 82.138.92.157/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 82.138.92.158/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 82.232.202.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 107.21.153.4/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 107.21.198.175/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 184.73.67.48/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 23.22.14.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 54.196.29.75/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 54.197.95.184/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 54.198.164.182/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 54.242.206.165/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 54.81.171.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 54.87.190.23/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 191.239.208.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 104.40.128.79/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 191.233.99.34/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 23.102.2.202/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 191.239.208.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 104.40.140.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 191.233.102.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 23.102.2.21/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 194.105.144.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 194.105.144.28/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 194.105.145.147/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 109.72.23.200/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 194.168.166.135/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 82.229.184.137/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 80.13.155.201/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 84.14.218.22/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 5.196.82.194/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 87.98.132.72/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 109.9.74.134/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 54.154.84.94/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 62.232.206.242/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 89.233.7.227/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 62.82.143.210/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 89.101.243.130/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 62.232.169.250/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 109.72.30.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 109.72.23.224/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 93.33.32.65/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 37.1.104.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 109.72.31.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 176.31.90.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 5.39.110.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 188.165.78.128/25 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 78.193.76.53/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -d 31.15.25.54/32 -p tcp -m tcp --dport 8080 -j DROP
-A INPUT -s 89.31.149.185/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 89.159.87.17/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 80.12.87.245/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 88.182.129.177/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 89.31.150.118/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 89.31.150.119/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 89.31.150.120/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 88.177.139.36/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 62.23.130.5/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 62.23.130.6/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 62.23.130.7/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 62.23.130.8/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 212.43.237.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 82.138.92.157/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 82.138.92.158/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 82.232.202.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 107.21.153.4/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 107.21.198.175/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 184.73.67.48/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 23.22.14.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 54.196.29.75/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 54.197.95.184/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 54.198.164.182/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 54.242.206.165/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 54.81.171.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 54.87.190.23/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 191.239.208.218/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 104.40.128.79/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 191.233.99.34/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 23.102.2.202/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 191.239.208.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 104.40.140.169/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 191.233.102.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 23.102.2.21/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 194.105.144.244/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 194.105.144.28/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 194.105.145.147/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 109.72.23.200/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 194.168.166.135/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 82.229.184.137/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 80.13.155.201/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 84.14.218.22/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 5.196.82.194/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 87.98.132.72/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 109.9.74.134/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 54.154.84.94/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 77.133.218.63/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 62.232.206.242/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 89.233.7.227/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 62.82.143.210/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 89.101.243.130/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 62.232.169.250/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 109.72.30.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 109.72.23.224/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 93.33.32.65/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 37.1.104.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 109.72.31.193/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 176.31.90.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 5.39.110.160/27 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 188.165.78.128/25 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 78.193.76.53/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 31.15.25.54/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 89.31.149.185/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 89.31.149.185/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 89.31.149.185/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 89.31.149.185/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 86.111.78.117/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 86.111.78.117/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 86.111.78.117/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 86.111.78.117/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 80.12.87.245/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 80.12.87.245/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 80.12.87.245/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 80.12.87.245/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 194.168.166.135/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 194.168.166.135/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 194.168.166.135/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 194.168.166.135/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 89.31.149.185/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 89.31.149.185/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 89.31.149.185/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 89.31.149.185/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 194.105.144.244/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 194.105.144.244/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 194.105.144.244/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 194.105.144.244/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 82.207.113.205/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 82.207.113.205/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 82.207.113.205/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 82.207.113.205/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 82.243.218.132/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 82.243.218.132/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 82.243.218.132/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 82.243.218.132/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 94.23.47.114/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 94.23.47.114/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 94.23.47.114/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 94.23.47.114/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 194.50.38.6/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 194.50.38.6/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 194.50.38.6/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 194.50.38.6/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 194.50.38.134/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 194.50.38.134/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 194.50.38.134/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 194.50.38.134/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 62.80.170.148/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 62.80.170.148/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 62.80.170.148/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 62.80.170.148/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 83.204.183.154/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 83.204.183.154/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 83.204.183.154/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 83.204.183.154/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 194.50.38.6/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 194.50.38.6/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 194.50.38.6/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 194.50.38.6/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 194.50.38.134/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 194.50.38.134/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 194.50.38.134/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 194.50.38.134/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 89.251.50.62/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 89.251.50.62/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 89.251.50.62/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 89.251.50.62/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 109.72.23.200/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 109.72.23.200/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 109.72.23.200/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 109.72.23.200/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 109.72.23.224/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 109.72.23.224/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 109.72.23.224/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 109.72.23.224/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 194.105.144.244/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 194.105.144.244/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 194.105.144.244/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 194.105.144.244/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 194.105.144.28/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 194.105.144.28/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 194.105.144.28/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 194.105.144.28/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 194.105.145.147/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 194.105.145.147/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 194.105.145.147/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 194.105.145.147/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 213.186.33.83/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 213.186.33.83/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 213.186.33.83/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 213.186.33.83/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 62.232.237.146/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 62.232.237.146/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 62.232.237.146/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 62.232.237.146/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 212.78.194.72/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 212.78.194.72/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 212.78.194.72/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 212.78.194.72/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 212.78.194.73/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 212.78.194.73/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 212.78.194.73/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 212.78.194.73/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 212.78.194.74/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 212.78.194.74/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 212.78.194.74/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 212.78.194.74/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 212.78.194.75/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 212.78.194.75/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 212.78.194.75/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 212.78.194.75/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 212.78.194.76/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 212.78.194.76/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 212.78.194.76/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 212.78.194.76/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 212.78.194.77/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 212.78.194.77/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 212.78.194.77/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 212.78.194.77/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 212.78.194.78/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 212.78.194.78/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 212.78.194.78/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 212.78.194.78/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 87.98.132.72/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 87.98.132.72/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 87.98.132.72/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 87.98.132.72/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 217.160.110.235/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 217.160.110.235/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 217.160.110.235/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 217.160.110.235/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 62.232.206.242/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 62.232.206.242/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 62.232.206.242/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 62.232.206.242/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 5.196.82.194/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 5.196.82.194/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 5.196.82.194/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 5.196.82.194/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 62.232.206.242/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 62.232.206.242/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 62.232.206.242/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 62.232.206.242/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 89.233.7.227/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 89.233.7.227/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 89.233.7.227/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 89.233.7.227/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 62.82.143.210/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 62.82.143.210/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 62.82.143.210/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 62.82.143.210/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 89.101.243.130/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 89.101.243.130/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 89.101.243.130/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 89.101.243.130/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 62.232.169.250/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 62.232.169.250/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 62.232.169.250/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 62.232.169.250/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 109.72.30.193/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 109.72.30.193/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 109.72.30.193/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 109.72.30.193/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 109.72.31.193/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 109.72.31.193/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 109.72.31.193/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 109.72.31.193/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 109.72.23.224/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 109.72.23.224/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 109.72.23.224/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 109.72.23.224/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 67.211.126.203/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 93.33.32.65/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 93.33.32.65/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 93.33.32.65/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 93.33.32.65/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 37.1.104.74/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 37.1.104.74/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 37.1.104.74/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 37.1.104.74/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 78.193.76.53/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 78.193.76.53/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 78.193.76.53/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 78.193.76.53/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 176.31.90.160/27 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 176.31.90.160/27 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 176.31.90.160/27 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 176.31.90.160/27 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 5.39.110.160/27 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 5.39.110.160/27 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 5.39.110.160/27 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 5.39.110.160/27 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 188.165.78.128/25 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 188.165.78.128/25 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 188.165.78.128/25 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 188.165.78.128/25 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 62.122.205.189/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 62.122.205.189/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j ACCEPT
-A INPUT -s 62.122.205.189/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -s 62.122.205.189/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -d 89.31.148.138/32 -p tcp -m tcp --dport 80 -j DROP
-A INPUT -d 89.31.148.138/32 -p tcp -m tcp --dport 81 -j DROP
-A INPUT -d 89.31.148.138/32 -p tcp -m tcp --dport 8080 -j DROP
-A INPUT -d 89.31.148.138/32 -p tcp -m tcp --dport 443 -j DROP
-A INPUT -s 89.31.149.185/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 3307 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 3307 -j ACCEPT
-A INPUT -s 188.165.210.20/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 3307 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 3307 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 3307 -j ACCEPT
-A INPUT -d 31.15.25.54/32 -p tcp -m tcp --dport 3307 -j DROP
-A INPUT -s 89.31.149.185/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 3308 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 3308 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 3308 -j ACCEPT
-A INPUT -s 80.12.87.245/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 3308 -j ACCEPT
-A INPUT -s 188.165.210.20/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 3308 -j ACCEPT
-A INPUT -s 37.187.114.68/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 3308 -j ACCEPT
-A INPUT -d 31.15.25.54/32 -p tcp -m tcp --dport 3308 -j DROP
-A INPUT -s 89.31.149.185/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 188.165.210.20/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 208.87.233.180/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -d 31.15.25.54/32 -p tcp -m tcp --dport 9200 -j DROP
-A INPUT -s 89.31.149.185/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 7200 -j ACCEPT
-A INPUT -s 54.217.231.167/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 7200 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 7200 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 7200 -j ACCEPT
-A INPUT -d 31.15.25.54/32 -p tcp -m tcp --dport 7200 -j DROP
-A INPUT -s 89.31.149.185/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 7100 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 7100 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 7100 -j ACCEPT
-A INPUT -d 31.15.25.54/32 -p tcp -m tcp --dport 7100 -j DROP
-A INPUT -s 89.31.149.185/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 4569 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 4569 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 31.15.25.54/32 -p tcp -m tcp --dport 4569 -j ACCEPT
-A INPUT -d 31.15.25.54/32 -p tcp -m tcp --dport 4569 -j DROP
-A INPUT -s 89.31.149.185/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 194.105.145.69/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 194.105.144.10/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 80.12.87.245/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 194.168.166.135/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 89.31.149.185/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 194.105.144.244/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 82.243.218.132/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 94.23.47.114/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 194.50.38.6/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 194.50.38.134/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 62.80.170.148/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 83.204.183.154/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 194.50.38.6/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 194.50.38.134/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 109.72.23.219/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 89.251.50.62/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 109.72.23.200/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 109.72.23.224/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 149.6.114.74/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 89.31.151.108/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 159.8.95.214/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 159.8.95.215/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 159.8.95.216/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 159.8.95.220/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -s 159.8.95.221/32 -d 89.31.148.138/32 -p tcp -m tcp --dport 9200 -j ACCEPT
-A INPUT -d 89.31.148.138/32 -p tcp -m tcp --dport 9200 -j DROP
-A fail2ban-ssh -s 116.31.116.14/32 -j DROP
-A fail2ban-ssh -j RETURN
COMMIT

sss
# Completed on Fri Jun  3 12:05:15 2016
